# neuro-flow

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI.in.md  CLI.md  Dockerfile  LICENSE  Makefile  README.md  SUMMARY.md  commands.md  docker.entrypoint.sh  pyproject.toml  setup.cfg  setup.py  t  towncrier.toml
.github/: dependabot.yml  test.yml
.github/workflows/: ci.yaml  ci.yml  setup-automerge.yml  test.yml  update-pre-commit.yml
CHANGELOG.D/: 1002.feature  1002.misc  1072.feature  1075.bugfix  1081.feature  1110.feature  1175.feature.md  1177.removal.md  1192.feature.md  122.bugfix  123.bugfix  128.feature  132.feature  133.feature  134.feature  135.feature  136.bugfix  139.bugfix  146.bugfix  147.feature  151.feature  152.bugfix  156.feature  160.bugfix  163.feature  170.feature  172.feature  174.feature  184.bugfix  190.bugfix  202.feature  203.feature  204.feature  217.feature  236.feature  239.bugfix  241.bugfix  255.feature  261.bugfix  294.bugfix  (+84 more)
build-tools/: check-mixins.py  cli-help-generator.py
examples/demo-jobs/: .dockerignore  Dockerfile  Dockerfile-batch  README.md  requirements.txt
examples/demo-jobs/.apolo/: batch-with-action.yml  batch-with-local.yml  jupyter.yml  live.yml  upload-local-action.yml
examples/demo-jobs/.neuro/: action.yml  batch-action.yml  batch-pass-config.yml  batch-with-action.yml  batch-with-image.yml  demo.yml  jobs.yml  live.yml  project.yaml  project.yml  seq.yml  upload-local-action.yml
examples/demo-jobs/code/: train.py
examples/demo-jobs/notebooks/: demo.ipynb
examples/tst-hang/.apolo/: tst-action.yml
examples/tst-hang/.neuro/: tst-action.yml  tst.yml
neuro_flow/: __init__.py  __main__.py  ast.py  backport_graphlib.py  batch_executor.py  batch_runner.py  cli.py  colored_topo_sorter.py  commands.py  config_loader.py  context.py  expr.py  expr_validation.py  in_memory_storage.py  live_runner.py  parser.py  plugin.py  runner.py  storage.py  storage_api.py  storage_base.py  tokenizer.py  types.py  utils.py
neuro_flow/cli/: batch.py  click_types.py  completion.py  images.py  live.py  main.py  project.py  project_template.py  root.py  storage.py  utils.py
neuro_flow/storage/: __init__.py  api.py  base.py  in_memory.py
reference/: README.md  SUMMARY.md  actions-syntax.md  batch-contexts.md  batch-workflow-commands.md  batch-workflow-syntax.md  cli.md  expression-functions.md  expression-syntax.md  live-actions-contexts.md  live-contexts.md  live-workflow-syntax.md  mixins.md  modules.md  project-configuration-syntax.md  workflow-syntax.md  workflows.md
reference/workflow-syntax/: README.md  expression-syntax.md  project-configuration-syntax.md
reference/workflow-syntax/actions-syntax/: README.md  live-actions-contexts.md
reference/workflow-syntax/batch-workflow-syntax/: README.md  batch-contexts.md  batch-workflow-commands.md
reference/workflow-syntax/live-workflow-syntax/: README.md  live-contexts.md
requirements/: base.txt  ci.txt  mypy.txt
src/apolo_flow/: __init__.py  action-schema.json  ast.py  batch_executor.py  batch_runner.py  config_loader.py  context.py  expr.py  expr_validation.py  flow-schema.json  live_runner.py  parser.py  plugin.py  project-schema.json  types.py  utils.py
src/apolo_flow/cli/: batch.py  click_types.py  completion.py  file_logging.py  flow.py  images.py  live.py  main.py  root.py  storage.py  utils.py
src/apolo_flow/storage/: api.py  base.py  in_memory.py
src/neuro_flow/: __init__.py  ast.py  batch_executor.py  batch_runner.py  colored_topo_sorter.py  config_loader.py  context.py  expr.py  expr_validation.py  live_runner.py  parser.py  tokenizer.py  types.py  utils.py
src/neuro_flow/cli/: batch.py  click_types.py  (+6 more)
tests/e2e/: conftest.py  test_batch.py  test_live.py  test_project.py
tests/unit/: bad-batch-action-call-extra-attrs.yml  batch-action-bad-output-needs.yml  batch-action-call-bad-output-needs.yml  batch-action-call.yml  batch-action-path.yml  batch-action-with-image.yml  batch-action-without-inputs.yml  batch-action.yml  batch-args-required.yml  batch-args.yml  batch-bad-eval.yml  batch-complex-seq.yml  batch-cycle.yml  batch-disabled-but-always.yml  batch-disabled-not-needed.yml  batch-enable.yml  batch-first-disabled.yml  batch-last-always.yml  batch-life-span.yml  batch-matrix-1.yml  batch-matrix-2.yml  batch-matrix-3.yml  batch-matrix-4.yml  batch-matrix-5.yml  batch-matrix-doubles.yml  batch-matrix-dynamic.yml  batch-matrix-fail-fast.yml  batch-matrix-incomplete-include.yml  batch-matrix-max-parallel-global.yml  batch-matrix-max-parallel.yml  batch-matrix-with-deps.yml  batch-matrix-with-strategy.yml  batch-matrix.yml  batch-minimal.yml  batch-mixin-with-bash-python-properties.yml  batch-mixin.yml  batch-needs-dict.yml  batch-needs.yml  batch-params-required.yml  batch-params.yml  (+65 more)
tools/: jsonschema-generator.py  migrate.py  wait_pypi.sh
(+73 files in other folders)
