[metadata]
name = neuro-flow
version = attr: neuro_flow.__version__
description = Pipelines system for neu.ro
url = https://github.com/neuro-inc/neuro-flow
long_description = file: README.md
long_description_content_type = text/markdown
author = Neu.ro Team
author_email = team@neu.ro
license = Apache 2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    =src
packages=find:
zip_safe=False
python_requires = >=3.8.0
include_package_data = True
install_requires =
    neuro-cli>=21.11.4
    pyyaml>=5.4
    funcparserlib>=1.0.0
    humanize>=0.5.1
    neuro-extras>=21.11.5
    graphviz>=0.14
    yarl>=1.7
    multidict>=5.0,<6.0
    rich>=10.0.1
    typing-extensions>=3.10
    click>=8.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    neuro-flow=neuro_flow.cli:main
neuro_api =
    neuro-cli=neuro_flow.plugin:setup

[tool:pytest]
asyncio_mode = auto

[flake8]
exclude = .git,.env,__pycache__,.eggs
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
lines_after_imports=2
known_standard_library=dataclasses
known_third_party=aiohttp,async_timeout,pytest

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
incremental = False

[mypy-funcparserlib.*]
ignore_missing_imports = true

[mypy-graphviz]
ignore_missing_imports = true

[mypy-humanize]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-neuro_extras]
ignore_missing_imports = true

[mypy-re_assert]
ignore_missing_imports = true
